--- a/index.html
+++ b/index.html
@@ -681,29 +681,28 @@ These stakeholders determine the extent and the level of detail of your work and
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
-<col style="width: 20%;">
-<col style="width: 40%;">
-<col style="width: 40%;">
+<col style="width: 14.2857%;">
+<col style="width: 28.5714%;">
+<col style="width: 28.5714%;">
+<col style="width: 28.5715%;">
 </colgroup>
 <thead>
 <tr>
 <th class="tableblock halign-left valign-top">Role/Name</th>
 <th class="tableblock halign-left valign-top">Contact</th>
 <th class="tableblock halign-left valign-top">Expectations</th>
+<th class="tableblock halign-left valign-top">Why</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Why</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">RTVE</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:rtve.dircom@rtve.es">rtve.dircom@rtve.es</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">- High-quality, functional quiz platform - On-time delivery - Easy-to-use interface - Detailed user stats and APIs</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">RTVE expects a product that aligns with the TV Show "Saber y Ganar," meets technical and usability requirements, and delivers a smooth experience for users.</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">ChattySw</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ChattySw</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:chattySw@projects.es">chattySw@projects.es</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Clear requirements and deadlines - Collaboration and timely feedback - Efficient code reviews and testing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The development team wants to ensure they’re building the right product and adhering to timelines. Efficient collaboration is crucial for success.</p></td>
@@ -712,18 +711,16 @@ These stakeholders determine the extent and the level of detail of your work and
 <td class="tableblock halign-left valign-top"><p class="tableblock">Professors</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Pablo González: <a href="mailto:gonzalezgpablo@uniovi.es">gonzalezgpablo@uniovi.es</a> &amp; Jose Labra: <a href="mailto:labra@uniovi.es">labra@uniovi.es</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">- Regular progress reports - Adherence to academic guidelines and criteria - Proper documentation of work and development process - Develop interpersonal skills and team dynamics</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Professors ensure the project aligns with academic objectives, grading criteria, and university standards. They provide guidance and feedback throughout the project to support learning and project success.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Professors ensure the project aligns with academic objectives, grading criteria, and university standards. They provide guidance and feedback throughout the project to support learning and project success.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Development team</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">· Víctor Llana Pérez - <a href="mailto:uo294629@uniovi.es">uo294629@uniovi.es</a> · Lara Haya Santiago - <a href="mailto:uo289684@uniovi.es">uo289684@uniovi.es</a> · Alba González Arango - <a href="mailto:uo289041@uniovi.es">uo289041@uniovi.es</a> · Marco Lorenzo Martínez - <a href="mailto:uo294324@uniovi.es">uo294324@uniovi.es</a> · Javier Menéndez Osendi - <a href="mailto:uo294866@uniovi.es">uo294866@uniovi.es</a> · Daniel Rodríguez Fernández - <a href="mailto:uo293655@uniovi.es">uo293655@uniovi.es</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">expectations</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Why</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata (Data Provider)</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata (Data Provider)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:wikidata@lists.wikimedia.org">wikidata@lists.wikimedia.org</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">- Accurate and reliable data used for question generation - Compliance with licensing and data-use policies</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata provides open data, so they expect the system to use the data ethically and correctly. They also expect proper attribution.</p></td>
@@ -732,21 +729,13 @@ These stakeholders determine the extent and the level of detail of your work and
 <td class="tableblock halign-left valign-top"><p class="tableblock">Empathy</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://empathy.co/contact-us/" class="bare">https://empathy.co/contact-us/</a> &amp; <a href="mailto:us@empathy.ai">us@empathy.ai</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">- Increased user engagement through their LLM - Integration of Empaty’s LLM for dynamic, diverse question generation - Opportunity for users to participate in Empaty’s contest</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Empaty is interested in promoting their LLM by having it integrated into the WIQ platform. They expect the integration to provide value to users and increase visibility for their technology by offering a contest tied to participation.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Empaty is interested in promoting their LLM by having it integrated into the WIQ platform. They expect the integration to provide value to users and increase visibility for their technology by offering a contest tied to participation.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Users</p></td>
 <td class="tableblock halign-left valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">- Easy registration and login - Engaging quiz experience - Accurate tracking of progress (games, questions, stats)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Trivia game to test their knoledge on several fields. Said game should be easy to use and must keep a record of past games</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">role/name</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">contact</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">expectations</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Why</p></td>
 </tr>
 </tbody>
 </table>
