--- a/index.html
+++ b/index.html
@@ -761,6 +761,80 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 </div>
+<div class="paragraph">
+<p>TECHNICAL</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 25%;">
+<col style="width: 75%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Constraint</th>
+<th class="tableblock halign-left valign-top">Explanation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Name</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The application must be called WIChat.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Game description</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The game will consist of showing a picture and the users guessing what it is about.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Obtaining the hints</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The hints for the game must be obtained from an external Large Language Model (LLM) through an API.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Source of information</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Information about the questions must be automatically generated from Wikidata. So should be the disctractors and the images.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Access to information</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The system will give access to the information about the generated questions and users through an API.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Deployment</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The application must be accessible through a web interface.</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>ORGANIZATIONAL</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 25%;">
+<col style="width: 75%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Constraint</th>
+<th class="tableblock halign-left valign-top">Explanation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Developers</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The application must be developed by a team of approximately 4 members.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Developing time</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The application must be developed by May. Also, it has to follow some deliveries throughout the semester.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Organization of the work</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Several meetings will be held by the group members to discuss further things to do.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Project management</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Git will be used to manage and document the project and advances.</p></td>
+</tr>
+</tbody>
+</table>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -1829,7 +1903,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-06 12:29:14 +0100
+Last updated 2025-02-07 11:16:46 +0100
 </div>
 </div>
 </body>
