--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 <div class="paragraph">
-<p>TECHNICAL</p>
+<p><strong>TECHNICAL CONSTRAINTS</strong></p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
@@ -803,7 +803,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </tbody>
 </table>
 <div class="paragraph">
-<p>ORGANIZATIONAL</p>
+<p><strong>ORGANIZATIONAL CONSTRAINTS</strong></p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
