--- a/index.html
+++ b/index.html
@@ -455,8 +455,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#section-architecture-constraints">2. Architecture Constraints</a></li>
 <li><a href="#section-context-and-scope">3. Context and Scope</a>
 <ul class="sectlevel2">
-<li><a href="#_business_context">3.1. Business Context</a></li>
-<li><a href="#_technical_context">3.2. Technical Context</a></li>
+<li><a href="#_introduction">3.1. Introduction</a></li>
+<li><a href="#_business_context">3.2. Business Context</a></li>
+<li><a href="#_technical_context">3.3. Technical Context</a></li>
 </ul>
 </li>
 <li><a href="#section-solution-strategy">4. Solution Strategy</a></li>
@@ -876,7 +877,13 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_business_context">3.1. Business Context</h3>
+<h3 id="_introduction">3.1. Introduction</h3>
+<div class="paragraph">
+<p>WiChat is a game designed for an online experiment done by RTVE, with the typical TV quiz contest format. To implement this application, we need to call several external APIs. Wikidata is the one in charge of giving us the information we require for the questions and the answers, and also the images the user is going to see, which are the main part of the application. We also use an LLM for generating some hints for the user (in form of wildcards) and a database for storing the user log-in information.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_business_context">3.2. Business Context</h3>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -899,14 +906,66 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 </div>
 <div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
+<p>@startuml
+:User:
+frame Application {
+	[WebApplication]
+	[BackendServer]
+}</p>
 </div>
+<div class="paragraph">
+<p>User -&#8594; WebApplication : interacts
+WebApplication &#8594; BackendServer
+BackendServer &#8594; WebApplication
+BackendServer &#8594; Wikidata
+BackendServer &#8594; LLM
+@enduml</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Communication Partners</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Input</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Output</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The user sees the web application in real time and makes decisions accordingly.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Performs actions on the application such as answering a question, using a wildcard or asking a question to a chatbot.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Web Application</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Receives user inputs and data from backend services.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Updates the interface to show to the user.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Backend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Takes actions from users received from the web application and data returned by different APIs.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Manages calls to APIs and updates the view of the web application.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Receives a query about a theme or category.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Returns a page corresponding to the given query.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">LLM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gets relevant information about the question the user has to answer.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Interacts or answers the user in several ways, depending on the used wildcard.</p></td>
+</tr>
+</tbody>
+</table>
 <div class="paragraph">
 <p><strong>&lt;optionally: Explanation of external domain interfaces&gt;</strong></p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_technical_context">3.2. Technical Context</h3>
+<h3 id="_technical_context">3.3. Technical Context</h3>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -925,8 +984,40 @@ together with a mapping table showing the relationships between channels and inp
 </div>
 </div>
 <div class="paragraph">
-<p><strong>&lt;Diagram or Table&gt;</strong></p>
+<p><strong>*&lt;Diagram or Table&gt;</strong></p>
 </div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Communication Partners</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Explanation</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Web Application</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The user can play the game using Internet, via HTTP.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Backend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Manages data and user actions, chatting with LLMs and generates trivia questions through calls to the respective APIs.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Database</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB database for storing users information.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Data is obtained throught SPARQL queries made by the service.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">LLM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gets relevant information about the question the user has to answer.</p></td>
+</tr>
+</tbody>
+</table>
 <div class="paragraph">
 <p><strong>&lt;optionally: Explanation of technical interfaces&gt;</strong></p>
 </div>
@@ -1903,7 +1994,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-07 11:16:46 +0100
+Last updated 2025-02-09 20:20:02 +0100
 </div>
 </div>
 </body>
