--- a/index.html
+++ b/index.html
@@ -1087,11 +1087,15 @@ together with a mapping table showing the relationships between channels and inp
 </colgroup>
 <thead>
 <tr>
-<th class="tableblock halign-left valign-top"><strong>Testability</strong></th>
-<th class="tableblock halign-left valign-top">We will follow Test Driven Development, and try to hit very high percentage of test-covered code.</th>
+<th class="tableblock halign-left valign-top"><strong>Quality goal</strong></th>
+<th class="tableblock halign-left valign-top"><strong>How will we achieve it?</strong></th>
 </tr>
 </thead>
 <tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Testability</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will follow Test Driven Development, and try to hit very high percentage of test-covered code.</p></td>
+</tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Usability</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">We will run usability tests, with dummy-users and external testers.</p></td>
