--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#section-solution-strategy">4. Solution Strategy</a>
 <ul class="sectlevel2">
-<li><a href="#_how_will_we_achieve_our_quality_goals">4.1. <strong>How will we achieve our quality goals?</strong></a></li>
+<li><a href="#_how_we_will_achieve_our_quality_goals">4.1. How we will achieve our quality goals</a></li>
 </ul>
 </li>
 <li><a href="#section-building-block-view">5. Building Block View</a>
@@ -1079,7 +1079,7 @@ together with a mapping table showing the relationships between channels and inp
 <p>For the front-end, even though React comes with a significant load time increase, the simplification and modernization that brings to the UI justifies the overhead. We could also use libraries like Angular.js, but they aren’t as modern as React.</p>
 </div>
 <div class="sect2">
-<h3 id="_how_will_we_achieve_our_quality_goals">4.1. <strong>How will we achieve our quality goals?</strong></h3>
+<h3 id="_how_we_will_achieve_our_quality_goals">4.1. How we will achieve our quality goals</h3>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 50%;">
