--- a/index.html
+++ b/index.html
@@ -460,7 +460,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_technical_context">3.3. Technical Context</a></li>
 </ul>
 </li>
-<li><a href="#section-solution-strategy">4. Solution Strategy</a></li>
+<li><a href="#section-solution-strategy">4. Solution Strategy</a>
+<ul class="sectlevel2">
+<li><a href="#_decompositon_of_the_system">4.1. Decompositon of the system</a></li>
+<li><a href="#_other_organizational_decisions">4.2. Other organizational decisions.</a></li>
+</ul>
+</li>
 <li><a href="#section-building-block-view">5. Building Block View</a>
 <ul class="sectlevel2">
 <li><a href="#_whitebox_overall_system">5.1. Whitebox Overall System</a></li>
@@ -470,10 +475,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#section-runtime-view">6. Runtime View</a>
 <ul class="sectlevel2">
-<li><a href="#_runtime_scenario_1">6.1. &lt;Runtime Scenario 1&gt;</a></li>
-<li><a href="#_runtime_scenario_2">6.2. &lt;Runtime Scenario 2&gt;</a></li>
-<li><a href="#">6.3. &#8230;&#8203;</a></li>
-<li><a href="#_runtime_scenario_n">6.4. &lt;Runtime Scenario n&gt;</a></li>
+<li><a href="#_sign_up">6.1. Sign up</a></li>
+<li><a href="#_log_in">6.2. Log in</a></li>
+<li><a href="#_playing_the_game">6.3. Playing the game</a></li>
+<li><a href="#_hints">6.4. Hints</a></li>
+<li><a href="#_rankings">6.5. Rankings</a></li>
 </ul>
 </li>
 <li><a href="#section-deployment-view">7. Deployment View</a>
@@ -663,11 +669,11 @@ If you as an architect do not know how the quality of your work will be judged&#
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Testability</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tests are going to be developed in order to test the different actions that our application will    provide.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Our application is going to be proven with different tests checking its funcionality.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Usability</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">We will do some user tests for different people of all ages in order to make our application usable by everyone.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Our application is going to be very intuitive, allowing new users to navigate through it quickly.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Portability</p></td>
@@ -987,6 +993,11 @@ The title of the table is the name of your system, the three columns contain the
 </tr>
 </tbody>
 </table>
+<div class="imageblock">
+<div class="content">
+<img src="./images/BusinessContext.png" alt="BusinessContext" width="1003" height="638">
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.3. Technical Context</h3>
@@ -1087,7 +1098,53 @@ Refer to details in the following sections.</p>
 </div>
 </div>
 </div>
+<div class="paragraph">
+<p>The application is built on the MERN stack, a full-stack combination of source-available technologies used for building web-based applications on a simpler and more agile manner. It consists of:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Name</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Explanation</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">NoSQL database which uses JSON-like documents with optional schemas. We choose it over relational databases to make use of its scalability and flexibility to store large amounts of data.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Express.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Backend framework for <em>Node.js</em>. It will simplify the process of building APIs.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">React.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Front-end JavaScript library. Despite the loading overhead, it will help us build a modern and fast UIs for the application.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Node.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Open-source cross-platform JavaScript Runtime environment which will be used to build the backend of the application. It is widely used and has an enormous amount of available libraries, wich makes it one of the best approach for most web applications.</p></td>
+</tr>
+</tbody>
+</table>
+<div class="sect2">
+<h3 id="_decompositon_of_the_system">4.1. Decompositon of the system</h3>
+<div class="paragraph">
+<p>The main architectural pattern to be used in the application is to divide different responsibilities in their own respective microservice, creating a logical separation between modules. This will help to coordinate the team and reduce conflicts while working on different microservices of the application, easing development.
+For the authentication microservice, we will be combining statelessess, a token-based model and API Gateway orchestration for a robust and scalable authentication system.
+Other microservices, such as the game microservice, or LLM microservice and WikiData querying microservice, will be based on either a MVC pattern or a Client-server or Controller-Responder model.
+As for design patterns, we will use template method to manage the behavior of the questions in different gamemodes and possibly the factory pattern to create the different questions.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_other_organizational_decisions">4.2. Other organizational decisions.</h3>
+<div class="paragraph">
+<p>Since we will be building a microserviced application, we will be using a microservice-oriented gitflow for version control. It will be a single repository (monorepo) where there is a folder for each service. We will also follow</p>
+</div>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1459,37 +1516,61 @@ You will mainly capture scenarios in your documentation to communicate your arch
 </div>
 </div>
 <div class="sect2">
-<h3 id="_runtime_scenario_1">6.1. &lt;Runtime Scenario 1&gt;</h3>
-<div class="ulist">
-<ul>
-<li>
-<p><em>&lt;insert runtime diagram or textual description of the scenario&gt;</em></p>
-</li>
-<li>
-<p><em>&lt;insert description of the notable aspects of the interactions between the
-building block instances depicted in this diagram.&gt;</em></p>
-</li>
-</ul>
-</div>
+<h3 id="_sign_up">6.1. Sign up</h3>
 <div class="paragraph">
-<p>It is possible to use a sequence diagram:</p>
+<p>The user wants to create a new account and register it for the future.
+Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="335">
+<img src="./images/SignUp.png" alt="SignUp" width="525" height="564">
 </div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_runtime_scenario_2">6.2. &lt;Runtime Scenario 2&gt;</h3>
-
+<h3 id="_log_in">6.2. Log in</h3>
+<div class="paragraph">
+<p>The user wants to log in with an account that has already been created.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/LogIn.png" alt="LogIn" width="420" height="504">
+</div>
+</div>
 </div>
 <div class="sect2">
-<h3 id="">6.3. &#8230;&#8203;</h3>
-
+<h3 id="_playing_the_game">6.3. Playing the game</h3>
+<div class="paragraph">
+<p>Selecting the game mode and playing it.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Playing.png" alt="Playing" width="684" height="621">
+</div>
+</div>
 </div>
 <div class="sect2">
-<h3 id="_runtime_scenario_n">6.4. &lt;Runtime Scenario n&gt;</h3>
+<h3 id="_hints">6.4. Hints</h3>
+<div class="paragraph">
+<p>The application has several types of hints, but we can define a general structure
+that matches with all of them, just by varying few details for each type.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Hints.png" alt="Hints" width="378" height="365">
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_rankings">6.5. Rankings</h3>
+<div class="paragraph">
+<p>Seeing the ranking of best scores. It can be the general one or the one for each category.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Rankings.png" alt="Rankings" width="405" height="556">
+</div>
+</div>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -2057,7 +2138,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-06 12:29:14 +0100
+Last updated 2025-02-09 20:20:02 +0100
 </div>
 </div>
 </body>
