--- a/index.html
+++ b/index.html
@@ -933,6 +933,11 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 <div class="sect2">
 <h3 id="_business_context">3.2. Business Context</h3>
+<div class="imageblock">
+<div class="content">
+<img src="./images/BusinessContext.png" alt="BusinessContext" width="1004" height="638">
+</div>
+</div>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -993,11 +998,6 @@ The title of the table is the name of your system, the three columns contain the
 </tr>
 </tbody>
 </table>
-<div class="imageblock">
-<div class="content">
-<img src="./images/BusinessContext.png" alt="BusinessContext" width="1003" height="638">
-</div>
-</div>
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.3. Technical Context</h3>
@@ -1108,8 +1108,8 @@ Refer to details in the following sections.</p>
 </colgroup>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Name</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Explanation</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Name</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Explanation</strong></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
@@ -1141,7 +1141,10 @@ As for design patterns, we will use template method to manage the behavior of th
 <div class="sect2">
 <h3 id="_other_organizational_decisions">4.2. Other organizational decisions.</h3>
 <div class="paragraph">
-<p>Since we will be building a microserviced application, we will be using a microservice-oriented gitflow for version control. It will be a single repository (monorepo) where there is a folder for each service. We will also follow</p>
+<p>Since we will be building a microserviced application, we will be using a microservice-oriented gitflow for version control. It will be a single repository (monorepo) where there is a folder for each service. We will also follow GitHub Flow for a straightforward development strategy.</p>
+</div>
+<div class="paragraph">
+<p>We will also follow SCRUM with 1-week sprints for the development cycle. Since we are heavily constricted by time, this will be our best alternative.</p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
