--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,11 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.3. Technical Context</h3>
+<div class="imageblock">
+<div class="content">
+<img src="./images/TechnicalContext.png" alt="TechnicalContext" width="41" height="183">
+</div>
+</div>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
