--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#section-solution-strategy">4. Solution Strategy</a>
 <ul class="sectlevel2">
 <li><a href="#_decompositon_of_the_system">4.1. Decompositon of the system</a></li>
-<li><a href="#_other_organizational_decisions">4.2. Other organizational decisions.</a></li>
+<li><a href="#_achieving_quality_goals">4.2. Achieving quality goals</a></li>
+<li><a href="#_other_organizational_decisions">4.3. Other organizational decisions.</a></li>
 </ul>
 </li>
 <li><a href="#section-building-block-view">5. Building Block View</a>
@@ -933,11 +934,6 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </div>
 <div class="sect2">
 <h3 id="_business_context">3.2. Business Context</h3>
-<div class="imageblock">
-<div class="content">
-<img src="./images/BusinessContext.png" alt="BusinessContext" width="998" height="638">
-</div>
-</div>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -1001,11 +997,6 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.3. Technical Context</h3>
-<div class="imageblock">
-<div class="content">
-<img src="./images/TechnicalContext.png" alt="TechnicalContext" width="999" height="638">
-</div>
-</div>
 <div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
@@ -1111,25 +1102,27 @@ Refer to details in the following sections.</p>
 <col style="width: 50%;">
 <col style="width: 50%;">
 </colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top"><strong>Name</strong></th>
+<th class="tableblock halign-left valign-top"><strong>Explanation</strong></th>
+</tr>
+</thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Name</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Explanation</strong></p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>MongoDB</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">NoSQL database which uses JSON-like documents with optional schemas. We choose it over relational databases to make use of its scalability and flexibility to store large amounts of data.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Express.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Express.js</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Backend framework for <em>Node.js</em>. It will simplify the process of building APIs.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">React.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>React.js</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Front-end JavaScript library. Despite the loading overhead, it will help us build a modern and fast UIs for the application.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Node.js</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Node.js</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Open-source cross-platform JavaScript Runtime environment which will be used to build the backend of the application. It is widely used and has an enormous amount of available libraries, wich makes it one of the best approach for most web applications.</p></td>
 </tr>
 </tbody>
@@ -1144,7 +1137,40 @@ As for design patterns, we will use template method to manage the behavior of th
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_organizational_decisions">4.2. Other organizational decisions.</h3>
+<h3 id="_achieving_quality_goals">4.2. Achieving quality goals</h3>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top"><strong>Goal</strong></th>
+<th class="tableblock halign-left valign-top"><strong>Steps to achieve it</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Testability</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will aim for a high test coverage of the code for the application, using tools like Selenium to achieve this.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Usability</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will perform usability tests, like using dummy users and testers, and we will extend the application to be accesible.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Portability</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will test the application in different environments, and use up-to-date frameworks and tools to ensure maximum compability.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Security</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We will follow best security practices, and use checklists to ensure there aren&#8217;t major security flaws in our application.</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_other_organizational_decisions">4.3. Other organizational decisions.</h3>
 <div class="paragraph">
 <p>Since we will be building a microserviced application, we will be using a microservice-oriented gitflow for version control. It will be a single repository (monorepo) where there is a folder for each service. We will also follow GitHub Flow for a straightforward development strategy.</p>
 </div>
@@ -2146,7 +2172,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-09 20:20:02 +0100
+Last updated 2025-02-13 09:38:02 +0100
 </div>
 </div>
 </body>
