--- a/index.html
+++ b/index.html
@@ -1694,12 +1694,9 @@ when your infrastructure is more complex.</p>
 </div>
 </div>
 </div>
-<div class="paragraph">
-<p><em><strong>&lt;Overview Diagram&gt;</strong></em></p>
-</div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment%20View.png" alt="Deployment View" width="994" height="638">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="1022" height="638">
 </div>
 </div>
 <div class="dlist">
