--- a/index.html
+++ b/index.html
@@ -954,6 +954,11 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 </div>
 </div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/diag-plantuml-md5-33120888d9a64b0b292423b088d7d14e.png" alt="Diagram" width="1021" height="638">
+</div>
+</div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 33.3333%;">
@@ -962,9 +967,9 @@ The title of the table is the name of your system, the three columns contain the
 </colgroup>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Communication Partners</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Input</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Output</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Communication Partners</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Input</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Output</strong></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
@@ -1695,7 +1700,7 @@ when your infrastructure is more complex.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment-View.png" alt="Deployment View" width="825" height="1011">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="991" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -2149,7 +2154,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-02-07 11:16:46 +0100
+Last updated 2025-02-09 20:20:02 +0100
 </div>
 </div>
 </body>
