--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-33120888d9a64b0b292423b088d7d14e.png" alt="Diagram" width="1021" height="638">
+<img src="./images/diag-plantuml-md5-b5ce748140e0ef88d5052870e6cda5ce.png" alt="Diagram" width="990" height="638">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -965,12 +965,14 @@ The title of the table is the name of your system, the three columns contain the
 <col style="width: 33.3333%;">
 <col style="width: 33.3334%;">
 </colgroup>
-<tbody>
+<thead>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Communication Partners</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Input</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Output</strong></p></td>
+<th class="tableblock halign-left valign-top">Communication Partners</th>
+<th class="tableblock halign-left valign-top">Input</th>
+<th class="tableblock halign-left valign-top">Output</th>
 </tr>
+</thead>
+<tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The user sees the web application in real time and makes decisions accordingly.</p></td>
@@ -1020,14 +1022,16 @@ together with a mapping table showing the relationships between channels and inp
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
-<col style="width: 50%;">
-<col style="width: 50%;">
+<col style="width: 33.3333%;">
+<col style="width: 66.6667%;">
 </colgroup>
-<tbody>
+<thead>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Communication Partners</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Explanation</p></td>
+<th class="tableblock halign-left valign-top">Communication Partners</th>
+<th class="tableblock halign-left valign-top">Explanation</th>
 </tr>
+</thead>
+<tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Web Application</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The user can play the game using Internet, via HTTP.</p></td>
@@ -1700,7 +1704,7 @@ when your infrastructure is more complex.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment-View.png" alt="Deployment View" width="991" height="638">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="1015" height="638">
 </div>
 </div>
 <div class="dlist">
