--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-0d7d8d525157916adb905238b4a3e078.png" alt="Diagram" width="1293" height="496">
+<img src="./images/diag-plantuml-md5-63fb09ea6180f441c6c924f15f499dee.png" alt="Diagram" width="1959" height="184">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1018,6 +1018,11 @@ The title of the table is the name of your system, the three columns contain the
 <p>E.g. UML deployment diagram describing channels to neighboring systems,
 together with a mapping table showing the relationships between channels and input/output.</p>
 </div>
+</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/diag-plantuml-md5-377173e88bf99af086ab3ff51b5c93e3.png" alt="Diagram" width="580" height="225">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
