--- a/index.html
+++ b/index.html
@@ -1269,30 +1269,10 @@ In the best case you will get away with examples or simple signatures.</p>
 </div>
 </div>
 </div>
-<div class="paragraph">
-<p>@startuml</p>
+<div class="imageblock">
+<div class="content">
+<img src="./images/Overview.png" alt="Overview" width="991" height="638">
 </div>
-<div class="paragraph">
-<p>storage {
-  actor user
-  rectangle Wikidata
-  rectangle LLM
-  node WIChat
-}</p>
-</div>
-<div class="paragraph">
-<p>skinparam node{
-  BackgroundColor #78a1c4
-  FontSize 18
-}</p>
-</div>
-<div class="paragraph">
-<p>user -right&#8594; WIChat
-Wikidata -&#8594; WIChat
-LLM -&#8594; WIChat</p>
-</div>
-<div class="paragraph">
-<p>@enduml</p>
 </div>
 <div class="dlist">
 <dl>
