--- a/index.html
+++ b/index.html
@@ -1441,32 +1441,10 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 </div>
 </div>
 </div>
-<div class="paragraph">
-<p>@startuml</p>
+<div class="imageblock">
+<div class="content">
+<img src="./images/diag-plantuml-md5-5b2811cf14a0df5404ca156d92612517.png" alt="Diagram" width="486" height="207">
 </div>
-<div class="paragraph">
-<p>actor User</p>
-</div>
-<div class="paragraph">
-<p>rectangle WiChat {
-    rectangle "Web Application" as Web
-    rectangle "Backend Service" as Backend
-    database Database
-}</p>
-</div>
-<div class="paragraph">
-<p>rectangle Wikidata
-rectangle LLM</p>
-</div>
-<div class="paragraph">
-<p>User &lt;&#8594; Web : HTTP
-Web &lt;&#8594; Backend
-Backend &lt;&#8594; Database : MongoDB
-Backend &lt;..&gt; Wikidata : SPARQL
-Backend &lt;..&gt; LLM</p>
-</div>
-<div class="paragraph">
-<p>@enduml</p>
 </div>
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -1503,7 +1481,7 @@ part of arc42 for additional levels.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-23d71a621e66f8e455e6c94cf50ad7f4.png" alt="Diagram" width="889" height="454">
+<img src="./images/diag-plantuml-md5-f3f236846d9d9fa28f0c0ea993088b2d.png" alt="Diagram" width="945" height="323">
 </div>
 </div>
 <div class="sect3">
