--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@ In the best case you will get away with examples or simple signatures.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-561a65af3d42e72e6828ebbbda4bb0c9.png" alt="Diagram" width="207" height="219">
+<img src="./images/diag-plantuml-md5-7eebe2bd8a10d84e795d0dfea8c0c3dd.png" alt="Diagram" width="800px" height="600px">
 </div>
 </div>
 <div class="dlist">
@@ -1481,7 +1481,7 @@ part of arc42 for additional levels.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-c7d9bfa14ecab19e4ffbd64622150295.png" alt="Diagram" width="547" height="804">
+<img src="./images/diag-plantuml-md5-58e4bca27dbccfc499091c310c2c0c33.png" alt="Diagram" width="526" height="539">
 </div>
 </div>
 <div class="sect3">
